[project]
name = "skill-boundary-agent"
description = "SBA, a brand new frame to detect students' skill boundary automatically."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dgl>=0.1.3",
    "matplotlib==3.10.1",
    "openai>=2.7.2",
    "python-dotenv>=1.2.1",
    "scikit-learn==1.6.1",
    "seaborn==0.13.2",
    "torch==2.6",
]
